2005-10-12  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_class_instance): Field count includes
	static fields.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_method_throws): Emit fully qualified name,
	not descriptor.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::handle_array_ref): Declare.
	(tree_generator::build_array_reference): Added argument.
	* tree.cc (handle_array_ref): New method
	(visit_array_ref): Use it.
	(build_array_reference): Added 'rhs' argument.  Emit call to
	_Jv_CheckArrayStore.
	(visit_assignment): Special case assignment to an array element.
	(handle_op_assignment): Likewise.

2005-10-12  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Implement new methods from the visitor
	interface.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* abi.cc (get_catch_initializer): New methods.
	* abi.hh (gcj_abi::get_catch_initializer): Declare.
	(cxx_abi::get_catch_initializer): Declare.
	(bc_abi::get_catch_initializer): Declare.
	* builtins.cc (map_catch_class): Removed duplicate code.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::make_block): Declare.
	* tree.cc (make_block): New method.
	(visit_method): Use it.
	(build_jni_stub): Likewise.
	(visit_block): Likewise.
	(visit_catch): Likewise.
	(visit_for_enhanced): Likewise.
	(visit_for): Likewise.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Use new get_descriptor.  Correctly
	look up class object.  Put 'obj' onto argument list.
	* classobj.cc (get_descriptor): Removed.
	(get_descriptor): Likewise.
	(create_one_field_record): Updated.
	(create_method_throws): Likewise.
	(create_one_method_record): Likewise.
	(create_index_table): Likewise.
	* builtins.hh (tree_builtins::get_descriptor): New methods.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_super_invocation): Added argument.
	* tree.hh (tree_generator::visit_super_invocation): Added
	argument.
